# wsrc_bme

./: .replit  pyproject.toml
wsrc_bme/: __init__.py  access_validators.py  auth.py  bme_api.py  dashboard.py  extensions.py  models.py  resquest.txt
wsrc_bme/templates/: base.html
wsrc_bme/templates/auth/: index.html  login.html  register.html
