[tool.poetry]
name = "wsrcbme"
version = "0.1.0"
description = ""
authors = ["saif"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-pymongo = "^2.3.0"
pymongo = {extras = ["srv"], version = "^3.11.0"}
mongoengine = "^0.20.0"
flask_jwt_extended = "^3.24.1"
flask-swagger = "^0.2.14"
flask-swagger-ui = "^3.36.0"
flask-restful = "^0.3.8"
flask-restful-swagger = "^0.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
 